[WorkplaceSearch] Deprecates content source key in favour of content source id

--- a/docs/guide/workplace-search-api.asciidoc
+++ b/docs/guide/workplace-search-api.asciidoc
@@ -13,10 +13,10 @@ documents = [
   { id: 'c535e226aee3', title: 'Metamorphosis', author: 'Franz Kafka' }
 ]
 
-response = client.index_documents(content_source_key, body: documents)
+response = client.index_documents(content_source_id, body: documents)
 
 # Delete Documents
-response = client.delete_documents(content_source_key, body: ['e68fbc2688f1', 'c535e226aee3'])
+response = client.delete_documents(content_source_id, body: ['e68fbc2688f1', 'c535e226aee3'])
 ----------------------------
 
 === Permissions
@@ -24,26 +24,26 @@ response = client.delete_documents(content_source_key, body: ['e68fbc2688f1', 'c
 [source,rb]
 ----------------------------
 # List permissions
-client.list_permissions(content_source_key)
+client.list_permissions(content_source_id)
 
 # Get a user permissions
-response = client.user_permissions(content_source_key, { user: 'enterprise_search' })
+response = client.user_permissions(content_source_id, { user: 'enterprise_search' })
 
 # Clear user permissions
-client.put_user_permissions(content_source_key, { permissions: [], user: 'enterpise_search' })
+client.put_user_permissions(content_source_id, { permissions: [], user: 'enterpise_search' })
 
 # Add permissions to a user
 client.add_user_permissions(
-  content_source_key,
+  content_source_id,
   { permissions: ['permission1', 'permission2'], user: user }
 )
 
 # Updates user permissions
-client.put_user_permissions(content_source_key, { permissions: [], user: user })
+client.put_user_permissions(content_source_id, { permissions: [], user: user })
 
 # Remove permissions from a user
 client.remove_user_permissions(
-  content_source_key,
+  content_source_id,
   { permissions: ['permission1', 'permission2'], user: user }
 )
 ----------------------------
@@ -54,19 +54,19 @@ client.remove_user_permissions(
 ----------------------------
 # Create external identities
 body = { user: 'elastic_user', source_user_id: 'example@elastic.co' }
-client.create_external_identity(content_source_key, body: body)
+client.create_external_identity(content_source_id, body: body)
 
 # Retrieve an external identity
-client.external_identity(content_source_key, user: 'elastic_user')
+client.external_identity(content_source_id, user: 'elastic_user')
 
 # List external identities
-client.list_external_identities(content_source_key)
+client.list_external_identities(content_source_id)
 
 # Update external identity
 body = { source_user_id: 'example2@elastic.co' }
-client.put_external_identity(content_source_key, user: 'elastic_user', body: body)
+client.put_external_identity(content_source_id, user: 'elastic_user', body: body)
 
 # Delete an external identity
-client.delete_external_identity(content_source_key, user: 'elastic_user')
+client.delete_external_identity(content_source_id, user: 'elastic_user')
 ----------------------------
 
