--- a/docs/guide/connecting.asciidoc
+++ b/docs/guide/connecting.asciidoc
@@ -60,7 +60,7 @@ client = Elastic::EnterpriseSearch::AppSearch::Client.new(host: host, http_auth:
 [[auth-ws]]
 ==== Authenticating with Workplace Search
 
-In your Elastic Workplace Search dashboard navigate to _Sources/Add a Shared Content Source_ and select _Custom API Source_ to create a new source. Name your source (e.g. `Enterprise Search Ruby Client`) and once it's created you'll get an `access token` and a `key`. You'll need these in the following steps.
+In your Elastic Workplace Search dashboard navigate to _Sources/Add a Shared Content Source_ and select _Custom API Source_ to create a new source. Name your source (e.g. `Enterprise Search Ruby Client`) and once it's created you'll get an `access token` and an `ID`. You'll need these in the following steps.
 
 The Workplace Search client can be accessed from an existing Enterprise Search Client, or you can initialize a new one. If you instantiate the Workplace Search client from an existing Enterprise Search Client, it's going to share the HTTP transport instance, so it's going to connect to the same host, which is a common scenario. However, if you want to connect to a different host, you should instantiate a new Workplace Client on its own:
 
@@ -68,12 +68,12 @@ The Workplace Search client can be accessed from an existing Enterprise Search C
 ----------------------------
 host = 'https://id.ent-search.europe-west2.gcp.elastic-cloud.com'
 access_token = '<access token>'
-content_source_key = '<content source key>'
+content_source_id = '<content source id>'
 
 # From the Enterprise Search client:
 ent_client = Elastic::EnterpriseSearch::Client.new(host: host)
 ent_client.workplace_search.http_auth = access_token
-ent_client.workplace_search.index_documents(content_source_key, body: documents)
+ent_client.workplace_search.index_documents(content_source_id, body: documents)
 
 # On its own
 workplace_search_client = Elastic::EnterpriseSearch::WorkplaceSearch::Client.new(
