[AppSearch] Adds synonym set tests and documentation

--- a/docs/guide/app-search-api.asciidoc
+++ b/docs/guide/app-search-api.asciidoc
@@ -53,6 +53,26 @@ query = {
 client.search(engine_name, query)
 ----------------------------
 
+=== Synonym Sets
+
+[source,rb]
+----------------------------
+# Create a synonym set
+client.create_synonym_set(engine_name, body: {['synonym1', 'synonym2']})
+
+# List synonym sets
+client.list_synonym_sets(engine_name)
+
+# Retrieve a synonym set by id
+client.synonym_set(engine_name, synonym_set_id: 'id')
+
+# Update a synonym set by id
+client.put_synonym_set(engine_name, synonym_set_id: 'id', body: {synonyms: ['synonym2', 'synonym3']})
+
+# Delete a synonym set
+client.delete_synonym_set(engine_name, synonym_set_id: id)
+----------------------------
+
 === Other API Endpoints
 
 [source,rb]
