[AppSearch] Updates docs with signed search key information

--- a/docs/guide/connecting.asciidoc
+++ b/docs/guide/connecting.asciidoc
@@ -57,6 +57,32 @@ client = Elastic::EnterpriseSearch::AppSearch::Client.new(host: host, http_auth:
 ----------------------------
 
 [discrete]
+[[signed-search-key]]
+===== Signed search key
+
+App Search also supports https://www.elastic.co/guide/en/app-search/current/authentication.html#authentication-signed[authenticating with signed search keys]. Here's an example on how to use it:
+
+[source,rb]
+----------------------------
+public_search_key = 'search-key-value'
+# This name must match the name of the key above from your App Search dashboard
+public_search_key_name = 'search-key'
+
+# Say we have documents with a title and an author. We want this key to be able
+#  to search by title, but only return the author:
+options = {
+  search_fields: { title: {} },
+  result_fields: { author: { raw: {} } }
+}
+
+signed_search_key = Elastic::EnterpriseSearch::AppSearch::Client.create_signed_search_key(public_search_key, public_search_key_name, options)
+
+client = Elastic::EnterpriseSearch::AppSearch::Client.new(http_auth: signed_search_key)
+
+client.search(engine_name, query: 'jungle')
+----------------------------
+
+[discrete]
 [[auth-ws]]
 ==== Authenticating with Workplace Search
 
