--- a/docs/guide/app-search-api.asciidoc
+++ b/docs/guide/app-search-api.asciidoc
@@ -18,6 +18,25 @@ client.engine('videogames')
 client.delete_engine('videogames')
 ----------------------------
 
+=== Meta engines
+
+[source,rb]
+----------------------------
+# Create a meta engine:
+body = {
+  name: engine_name,
+  type: 'meta',
+  source_engines: [ 'books', 'videogames' ]
+}
+client.create_engine(name: engine_name, body: body)
+
+# Add a source engine to a meta engine:
+client.add_meta_engine_source(meta_engine_name, body: [source_engine_name])
+
+# Remove a source enginge from a meta engine:
+client.delete_meta_engine_source(meta_engine_name, body: [source_engine_name])
+----------------------------
+
 === Documents
 
 [source,rb]
