[AppSearch] Adds specs and docs for log_clickthrough

--- a/docs/guide/app-search-api.asciidoc
+++ b/docs/guide/app-search-api.asciidoc
@@ -144,4 +144,7 @@ client.top_clicks_analytics(engine_name, query: {})
 
 # Search Settings - Returns current search settings for an engine
 client.search_settings(engine_name)
+
+# Click - Send data about clicked results
+client.log_clickthrough(engine_name, query_text: 'query', document_id: 'doc-id')
 ----------------------------
