--- a/docs/guide/app-search-api.asciidoc
+++ b/docs/guide/app-search-api.asciidoc
@@ -133,6 +133,9 @@ client.count_analytics(engine_name)
 # Schema - Retrieve current schema for the engine
 client.schema(engine_name)
 
+# Update schema for an engine
+client.put_schema(engine_name, body: {field: 'type'})
+
 # Logs - The API Log displays API request and response data at the Engine level
 client.api_logs(engine_name, from_date: Date.new(2020, 10, 01), to_date: Date.new(2020, 11, 05))
 
