--- a/docs/guide/connecting.asciidoc
+++ b/docs/guide/connecting.asciidoc
@@ -7,6 +7,7 @@ This page contains the information you need to connect and use the Client with E
 **On this page**
 
 * <<authentication>>
+* <<custom_headers>>
 
 
 [discrete]
@@ -105,5 +106,20 @@ ent_client.workplace_search.index_documents(content_source_id, body: documents)
 workplace_search_client = Elastic::EnterpriseSearch::WorkplaceSearch::Client.new(
   host: host,
   http_auth: access_token
+)
+----------------------------
+
+[discrete]
+[[custom_headers]]
+=== Custom HTTP Headers
+
+You can pass in headers as a parameter to any of the API Endpoints to set custom headers for the request:
+
+[source,rb]
+----------------------------
+headers = { 'x-custom-header' => 'Header value' }
+workplace_search_client.index_documents(
+  content_source_id,
+  { body: documents, headers: headers }
 )
 ----------------------------
