--- a/docs/guide/app-search-api.asciidoc
+++ b/docs/guide/app-search-api.asciidoc
@@ -75,10 +75,24 @@ query = {
 
 client.search(engine_name, query)
 
+# Search with multiple filters
+client.search('parks', {
+  body: {
+    query: "olympic",
+    filters: {
+      all: [
+        { states: "Washington" },
+        { world_heritage_site: "true" }
+      ]
+    }
+  }
+})
+
 # Multi query search
 queries = [{ query: 'Nicanor'}, { query: 'Iain' }]
 
 client.multi_search(engine_name, queries: queries)
+
 ----------------------------
 
 === Synonym Sets
