[Worplace Search] Updates delete documents with named body parameter

--- a/docs/guide/workplace-search-api.asciidoc
+++ b/docs/guide/workplace-search-api.asciidoc
@@ -16,7 +16,7 @@ documents = [
 response = client.index_documents(content_source_id, body: documents)
 
 # Delete Documents
-response = client.delete_documents(content_source_id, body: ['e68fbc2688f1', 'c535e226aee3'])
+response = client.delete_documents(content_source_id, document_ids: ['e68fbc2688f1', 'c535e226aee3'])
 ----------------------------
 
 === OAuth Authentication
