--- a/docs/guide/app-search-api.asciidoc
+++ b/docs/guide/app-search-api.asciidoc
@@ -174,6 +174,25 @@ client.put_api_key(api_key_name: name, body: body)
 client.delete_api_key(api_key_name: name)
 ----------------------------
 
+=== Crawler
+
+[source,rb]
+----------------------------
+# Create a crawler domain
+body = { name: 'https://www.elastic.co' }
+client.create_crawler_domain(engine_name, body: body)
+
+# Get crawler domain information
+client.crawler_domain(engine_name, domain_id: domain_id)
+
+# Update a crawler domain
+body = { name: 'https://www.wikipedia.org' }
+client.put_crawler_domain(engine_name, domain_id: domain_id, domain: body)
+
+# Delete a crawler domain
+client.delete_crawler_domain(engine_name, domain_id: domain_id)
+----------------------------
+
 === Other API Endpoints
 
 [source,rb]
