--- a/docs/guide/app-search-api.asciidoc
+++ b/docs/guide/app-search-api.asciidoc
@@ -178,6 +178,13 @@ client.delete_api_key(api_key_name: name)
 
 === Web Crawler
 
+[CAUTION]
+====
+The Elastic Enterprise Search web crawler API is a *beta* feature.
+Beta features are subject to change and are not covered by the support SLA of general release (GA) features.
+Elastic plans to promote this feature to GA in a future release.
+====
+
 See https://www.elastic.co/guide/en/app-search/current/web-crawler-api-reference.html[Web Crawler API reference] for more information.
 
 [source,rb]
@@ -287,6 +294,12 @@ client.denied_urls(engine_name, process_crawl_id: id)
 
 # List process crawls
 client.list_crawler_process_crawls(engine_name)
+
+# View denied urls for Process Crawl
+client.crawler_process_crawl_denied_urls(engine_name, process_crawl_id: id)
+
+# Cancel an active crawl request, stopping a running crawl if needed.
+client.delete_crawler_active_crawl_request(engine_name)
 ----------------------------
 
 === Other API Endpoints
