--- a/docs/guide/release_notes/index.asciidoc
+++ b/docs/guide/release_notes/index.asciidoc
@@ -5,12 +5,14 @@
 [discrete]
 === 7.x
 
+* <<release_notes_715, 7.15.0 Release Notes>>
 * <<release_notes_714, 7.14.0 Release Notes>>
 * <<release_notes_713, 7.13.0 Release Notes>>
 * <<release_notes_712, 7.12.0 Release Notes>>
 * <<release_notes_711, 7.11.0 Release Notes>>
 * <<release_notes_710, 7.10.0.beta.1 Release Notes>>
 
+include::715.asciidoc[]
 include::714.asciidoc[]
 include::713.asciidoc[]
 include::712.asciidoc[]
