[App Search] Adds list_crawler_domains

--- a/docs/guide/app-search-api.asciidoc
+++ b/docs/guide/app-search-api.asciidoc
@@ -196,6 +196,9 @@ client.create_crawler_domain(engine_name, body: body)
 # Get crawler domain information
 client.crawler_domain(engine_name, domain_id: domain_id)
 
+# List crawler domains
+client.list_crawler_domains(engine_name)
+
 # Update a crawler domain
 body = { name: 'https://www.wikipedia.org' }
 client.put_crawler_domain(engine_name, domain_id: domain_id, domain: body)
