[DOCS] Adds Release Notes for 7.17

--- a/docs/guide/release_notes/index.asciidoc
+++ b/docs/guide/release_notes/index.asciidoc
@@ -5,6 +5,7 @@
 [discrete]
 === 7.x
 
+* <<release_notes_717, 7.17.0 Release Notes>>
 * <<release_notes_716, 7.16.0 Release Notes>>
 * <<release_notes_715, 7.15.0 Release Notes>>
 * <<release_notes_714, 7.14.0 Release Notes>>
@@ -13,6 +14,7 @@
 * <<release_notes_711, 7.11.0 Release Notes>>
 * <<release_notes_710, 7.10.0.beta.1 Release Notes>>
 
+include::717.asciidoc[]
 include::716.asciidoc[]
 include::715.asciidoc[]
 include::714.asciidoc[]
