--- a/docs/guide/release_notes/index.asciidoc
+++ b/docs/guide/release_notes/index.asciidoc
@@ -3,6 +3,12 @@
 
 
 [discrete]
+=== 8.x
+
+* <<release_notes_80, 8.0.0.pre Release Notes>>
+
+
+[discrete]
 === 7.x
 
 * <<release_notes_717, 7.17.0 Release Notes>>
@@ -14,6 +20,7 @@
 * <<release_notes_711, 7.11.0 Release Notes>>
 * <<release_notes_710, 7.10.0.beta.1 Release Notes>>
 
+include::80.asciidoc[]
 include::717.asciidoc[]
 include::716.asciidoc[]
 include::715.asciidoc[]
